<resources>
    <string name="app_name">submission</string>
    <string name="username">Username</string>
    <string name="search_hint">""</string>
    <string name="detail_user">Detail User</string>
    <string name="_0000">0000</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="hint">-</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="github_user_app">Github User App</string>
    <string name="waiting_to_search">Waiting to Search</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>